--- a/dicoogle/pom.xml
+++ b/dicoogle/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>pt.ua.ieeta</groupId>
         <artifactId>dicoogle-all</artifactId>
-        <version>3.2.2-SNAPSHOT</version>
+        <version>3.2.2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
